--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in version 0.99.13 (2019-10-11)
++ Final Clean up of code
++ Added normalization helper function
+
 Changes in version 0.99.9 (2019-09-30)
 + Major rewrite to functionalize outlier_analysis and reduce redundant code
 + Fixed Reviewer suggestions
